--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div class="header">
     <div class="gradient">
       <div class="demo">
-        <a href="javascript:window.location.reload(true)"><img class="logo" id="logo" src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+        <a href="javascript:window.location.reload(true)"><img class="logo" id="logo" src="<%= asset_path 'portfolio-logo3.png' %>"/></a>
       </div>
       <div class="hsContent" id="blur" data-center="bottom: 5px; opacity: 1"
           data-top="bottom: 400px; opacity: 0"
@@ -88,7 +88,7 @@
 <footer>
   <div class="container">
     <div class="footer-logo col-md-4 col-md-offset-4 text-center">
-      <a href="javascript:window.location.reload(true)"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+      <a href="javascript:window.location.reload(true)"><img src="<%= asset_path 'portfolio-logo3.png' %>"/></a>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
