--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -2,10 +2,10 @@
    <div class="container">
        <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-               <a href="#"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
+               <a href="#"><img data-aos="fade-in" src="/assets/portfolio-logo3.png"/></a>
            </button>
            <a href="#">
-               <img data-aos="fade-right" class="navbar-brand page-scroll" src="/assets/portfolio-logo.png"/>
+               <img data-aos="fade-right" class="navbar-brand page-scroll" src="/assets/portfolio-logo3.png"/>
            </a>
        </div>
        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -148,7 +148,7 @@
 <footer>
   <div class="container">
     <div class="footer-logo col-md-4 col-md-offset-4 text-center">
-      <a href="javascript:window.location.reload(true)"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+      <a href="javascript:window.location.reload(true)"><img src="<%= asset_path 'portfolio-logo3.png' %>"/></a>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
